@@ -1,3 +1,4 @@
+2022-12-25: [BUGFIX] Catch errors where `SnapCast` widget can't retrieve ID from server
 2022-12-22: [FEATURE] Add `Syncthing` widget
 2022-12-21: [BUGFIX] Fix issue redrawing controls after mouse focus change
 2022-12-20: [FEATURE] Add `ProgressBarMixin` and convert `ALSAWidget` and `BrightnessControl` to use mixin
